--- a/2. Server/CMakeLists.txt
+++ b/2. Server/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.1)
 
-set(project_name PrimusServer) ## rename your project here
+set(project_name PrimusServer)
 
 project(${project_name})
 
@@ -8,27 +8,28 @@ set(CMAKE_CXX_STANDARD 11)
 
 add_library(${project_name}-lib
         src/AppComponent.hpp
-        src/controller/MyController.cpp
-        src/controller/MyController.hpp
+        src/controller/Controllers.cpp
+        src/controller/Controllers.hpp
         src/dto/DTOs.hpp
 )
 
 ## link libs
 
-find_package(oatpp 1.3.0 REQUIRED)
+find_package(oatpp          1.3.0 REQUIRED)
+find_package(oatpp-sqlite   1.3.0 REQUIRED)
 
 target_link_libraries(${project_name}-lib
         PUBLIC oatpp::oatpp
         PUBLIC oatpp::oatpp-test
+        PUBLIC oatpp::oatpp-sqlite
 )
 
 target_include_directories(${project_name}-lib PUBLIC src)
 
 ## add executables
 
-add_executable(${project_name}-exe
-        src/App.cpp
-        test/app/MyApiTestClient.hpp)
+add_executable(${project_name}-exe src/App.cpp)
+
 target_link_libraries(${project_name}-exe ${project_name}-lib)
 add_dependencies(${project_name}-exe ${project_name}-lib)
 
@@ -36,8 +37,8 @@ add_executable(${project_name}-test
         test/tests.cpp
         test/app/TestComponent.hpp
         test/app/MyApiTestClient.hpp
-        test/MyControllerTest.cpp
-        test/MyControllerTest.hpp
+        "test/StaticControllerTest.cpp"
+        test/StaticControllerTest.hpp
 )
 
 target_link_libraries(${project_name}-test ${project_name}-lib)
