--- a/2. Server/CMakeLists.txt
+++ b/2. Server/CMakeLists.txt
@@ -16,12 +16,19 @@ add_library(${project_name}-lib
 ## link libs
 
 find_package(oatpp          1.3.0 REQUIRED)
+find_package(oatpp-swagger  1.3.0 REQUIRED)
 find_package(oatpp-sqlite   1.3.0 REQUIRED)
 
 target_link_libraries(${project_name}-lib
         PUBLIC oatpp::oatpp
         PUBLIC oatpp::oatpp-test
+        PUBLIC oatpp::oatpp-swagger
         PUBLIC oatpp::oatpp-sqlite
+)
+
+add_definitions(
+        ## define path to swagger-ui static resources folder
+        -DOATPP_SWAGGER_RES_PATH="${oatpp-swagger_INCLUDE_DIRS}/../bin/oatpp-swagger/res"
 )
 
 target_include_directories(${project_name}-lib PUBLIC src)
