Funktionalität und Verzeichnis zum Laden von Websites ergänzt
Es wurde die Funktionalität zum StaticController ergänzt, dass aus dem Unterverzeichnis web nun html Dateien als Endpunkte definiert werden können. Dies ermöglicht grundsätzlich das Laden von Websites mittels Oatpp. Es wurde außerdem kleinere Funktionalität ergänzt um die Anzahl von Mitgliedern (insgesamt, aktiv und inaktiv) heraus zu finden. Einige API Endpunkte wurden nebenbau auch überarbeitet. Ggf. wird das Format, in welchem die API hierbei festgelegt wurde, auch bei anderen Endpunkt-Controller übernommen

--- a/2. Server/CMakeLists.txt
+++ b/2. Server/CMakeLists.txt
@@ -57,6 +57,9 @@ file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/database/db_content)
 # Create directory for profile images of members
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/database/db_content/profile_images)
 
+# Create directory for profile images of members
+file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/web/)
+
 add_definitions(
         ## define path to swagger-ui static resources folder
         -DOATPP_SWAGGER_RES_PATH="${oatpp-swagger_INCLUDE_DIRS}/../bin/oatpp-swagger/res"
@@ -75,6 +78,9 @@ add_definitions(
 
         ## Special folder for profile images
         -DPROFILE_IMAGES_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/database/db_content/profile_images"
+
+        ## Folder for html sites that may be requested
+        -DWEB_CONTENT_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/web"
 )
 
 if(CMAKE_SYSTEM_NAME MATCHES Linux)
