Refaktorisierung, Kommentieren, entfernen unnötigen Codes
Das Dto CountDto wurde entfernt. Es wurden 2 andere Dtos an seiner Stelle eingeführt, welche einen einzelnen Wert repräsentieren (1x signed und 1x unsigned). Es wurden Kommentare an vielen Stellen ergänzt.

--- a/PrimusSvr/CMakeLists.txt
+++ b/PrimusSvr/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SOURCES
     src/database/DatabaseClient.hpp
     src/database/DatabaseComponent.hpp
     src/dto/BooleanDto.hpp
-    src/dto/CountDto.hpp
+    src/dto/Int32Dto.hpp
     src/dto/MembershipFeeDto.hpp
     src/dto/PageDto.hpp
     src/dto/StatusDto.hpp
