Response and request management splitup
Split up the management of the request and the endpoint with one function (others will follow). Implemented a custom exception to catch in the endpoint controller and send a custom StatusDto with more detail on errors. Currently only one endpoint uses the new functionality, which is subject to change as the new system provides more modularity. Some added functionality will also be changed as the exception thrown is not catched at a central point and may cause the programm to crash when using the newly implemented functionality to a bigger extend

--- a/PrimusSvr/CMakeLists.txt
+++ b/PrimusSvr/CMakeLists.txt
@@ -17,7 +17,7 @@ set(SOURCES
     src/App.cpp
 )
 # Create a library target
-add_library(PrimusSvrLibrary ${SOURCES})
+add_library(PrimusSvrLibrary ${SOURCES} "src/managers/MemberMamanger.cpp")
 
 # Find required packages
 find_package(oatpp 1.3.0 REQUIRED)
@@ -57,7 +57,7 @@ endif()
 target_include_directories(PrimusSvrLibrary PUBLIC src)
 
 # Create an executable target
-add_executable(PrimusSvr src/App.cpp)
+add_executable(PrimusSvr src/App.cpp "src/managers/MemberMamanger.cpp")
 
 target_compile_definitions(PrimusSvr
     PUBLIC OATPP_SWAGGER_RES_PATH="${oatpp-swagger_INCLUDE_DIRS}/../bin/oatpp-swagger/res"
